--- a/public/embed.html
+++ b/public/embed.html
@@ -41,45 +41,46 @@ scramjet.init();
 navigator.serviceWorker.register("./sw.js");
 const connection = new BareMux.BareMuxConnection("/baremux/worker.js");
 const store = {
-  url: "https://",
   wispurl: _CONFIG?.wispurl || (location.protocol === "https:" ? "wss" : "ws") + "://" + location.host + "/wisp/",
   bareurl: _CONFIG?.bareurl || (location.protocol === "https:" ? "https" : "http") + "://" + location.host + "/bare/",
-  proxy: "",
-  transport: "/epoxy/index.mjs",
 };
 
 function getParams() {
   const hash = location.hash.substring(1);
-  const [noRedirectPart, urlPart] = hash.split("#");
-  const noRedirect = location.search.includes("no-redirect") || (noRedirectPart && noRedirectPart.includes("no-redirect"));
-  const rawUrl = urlPart || noRedirectPart || hash;
-  let url = rawUrl;
-  if (url && !url.startsWith("http://") && !url.startsWith("https://")) {
-    url = "https://" + url;
-  }
-  return { url: url || "https://google.com/", noRedirect };
+  const noRedirect = location.search.includes("no-redirect");
+  let url = hash || "https://google.com/";
+  if (!url.startsWith("http://") && !url.startsWith("https://")) url = "https://" + url;
+  return { url, noRedirect };
 }
 
 async function loadFromHash() {
   const { url, noRedirect } = getParams();
   await waitForTransport();
   const frame = scramjet.createFrame();
+  const iframe = frame.frame;
+
   if (noRedirect) {
-    frame.frame.sandbox = "allow-scripts allow-same-origin allow-modals allow-forms";
-    frame.frame.style.pointerEvents = "none";
-    frame.frame.addEventListener("load", () => {
+    iframe.sandbox = "allow-scripts allow-same-origin allow-modals allow-forms allow-popups-to-escape-sandbox";
+
+    iframe.addEventListener("load", () => {
       try {
-        const doc = frame.frame.contentDocument || frame.frame.contentWindow.document;
-        doc.addEventListener("click", e => e.preventDefault(), true);
-        doc.addEventListener("auxclick", e => e.preventDefault(), true);
-        doc.addEventListener("contextmenu", e => e.preventDefault(), true);
-        const style = doc.createElement("style");
-        style.textContent = `* { user-select: none !important; } a, button, [onclick], [onmousedown], [role="button"] { pointer-events: none !important; }`;
-        doc.head.appendChild(style);
+        const doc = iframe.contentDocument;
+
+        const blockNewTabOnly = (e) => {
+          const link = e.target.closest("a");
+          if (link && link.getAttribute("target") === "_blank") {
+            e.preventDefault();
+            e.stopPropagation();
+          }
+        };
+
+        doc.addEventListener("click", blockNewTabOnly, true);
+        doc.addEventListener("auxclick", blockNewTabOnly, true);
       } catch (e) {}
     });
   }
-  document.getElementById("iframe-container").appendChild(frame.frame);
+
+  document.getElementById("iframe-container").appendChild(iframe);
   frame.go(url);
 }
 
@@ -87,38 +88,22 @@ async function waitForTransport() {
   let attempts = 0;
   const maxAttempts = 10;
   while (attempts < maxAttempts) {
-    try {
-      await connection.setTransport("/epoxy/index.mjs", [{ wisp: store.wispurl }]);
-      return;
-    } catch (e) {
-      try {
-        await connection.setTransport("/baremod/index.mjs", [store.bareurl]);
-        return;
-      } catch (e2) {
-        try {
-          await connection.setTransport("/libcurl/index.mjs", [{ wisp: store.wispurl }]);
-          return;
-        } catch (e3) {
-          attempts++;
-          if (attempts >= maxAttempts) {
-            console.error("Failed to set any transport after", maxAttempts, "attempts");
-            throw new Error("No bare clients available");
-          }
-          await new Promise(resolve => setTimeout(resolve, 100));
-        }
-      }
-    }
+    try { await connection.setTransport("/epoxy/index.mjs", [{ wisp: store.wispurl }]); return; }
+    catch { try { await connection.setTransport("/baremod/index.mjs", [store.bareurl]); return; }
+    catch { try { await connection.setTransport("/libcurl/index.mjs", [{ wisp: store.wispurl }]); return; }
+    catch {
+      attempts++;
+      if (attempts >= maxAttempts) throw new Error("No transport");
+      await new Promise(r => setTimeout(r, 100));
+    }}}
   }
 }
 
-window.addEventListener("hashchange", async () => {
+window.addEventListener("hashchange", () => {
   document.getElementById("iframe-container").innerHTML = "";
-  await loadFromHash();
+  loadFromHash();
 });
-
-window.addEventListener("load", async () => {
-  await loadFromHash();
-});
+window.addEventListener("load", loadFromHash);
 </script>
 </body>
 </html>
