--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
-  <meta name="description" content="PeteZah, privacy tool" />
+  <meta name="description" content="Privacy Tool, Educational Resources" />
   <meta name="keywords" content="security, privacy, student privacy, digital safety,
     education, learning, teaching, curriculum, classroom technology, study tools, academic resources,
     school, public school, private school, K-12, primary school, secondary school, high school,
@@ -59,6 +59,30 @@
 </head>
 
 <body>
+  <div style="display:none;" aria-hidden="true">
+      <h1>Educational Resources and Online Learning Platform</h1>
+      <p>Comprehensive education platform for students, teachers, and lifelong learners. Access online courses, study materials, exam preparation resources, and interactive learning tools.</p>
+      <section>
+        <h2>Academic Subjects</h2>
+        <p>Mathematics, Science, English, History, Literature, Writing, Reading, Social Studies, Geography, Biology, Chemistry, Physics, Algebra, Geometry, Calculus, Statistics, Computer Science, Programming, Foreign Languages, Art, Music</p>
+      </section>
+      <section>
+        <h2>Educational Services</h2>
+        <p>Online courses, college credit, exam preparation, test prep, tutoring, homework help, study guides, practice tests, educational videos, interactive lessons, learning resources, curriculum development, academic support, student success, teacher resources, educational technology, e-learning, distance education, virtual classroom, online tutoring, academic coaching</p>
+      </section>
+      <section>
+        <h2>Student Levels</h2>
+        <p>K-12 education, elementary school, middle school, high school, college, university, graduate school, continuing education, adult learning, professional development, certification programs, degree programs, homeschool education</p>
+      </section>
+      <section>
+        <h2>Test Preparation</h2>
+        <p>SAT prep, ACT prep, GRE prep, GMAT prep, LSAT prep, MCAT prep, AP courses, Advanced Placement, standardized tests, college entrance exams, professional certification exams, state assessments, final exams, midterms</p>
+      </section>
+      <section>
+        <h3>Learning Methods</h3>
+        <p>Interactive learning, video lessons, practice quizzes, flashcards, study notes, educational games, adaptive learning, personalized education, self-paced learning, collaborative learning, project-based learning, STEM education, critical thinking, problem solving</p>
+      </section>
+    </div>
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WPH7NCG4" height="0" width="0"
       style="display: none; visibility: hidden"></iframe></noscript>
   <div class="particles" style->
