--- a/public/pages/settings/p.html
+++ b/public/pages/settings/p.html
@@ -159,7 +159,7 @@
   <script src="/storage/js/settings.js"></script>
   <script type="text/javascript">
     aclib.runAutoTag({
-        zoneId: 'arzbnlsnbd',
+        zoneId: 'pifa6if29m',
     });
 </script>
 
