--- a/public/pages/a.html
+++ b/public/pages/a.html
@@ -33,14 +33,14 @@
 
 
 
-    <title>PeteZah | Apps</title>
+    <title>Bubbergames | Apps</title>
     <link rel="icon" type="icon/x-icon" href="/storage/images/logo-png-removebg-preview.png" />
     <link rel="stylesheet" type="text/css" href="/storage/css/themes.css">
     <link rel="stylesheet" type="text/css" href="/storage/css/apps.css" />
 
 
-    <meta name="description" content="Pete Zah, game on" />
-    <meta name="keywords" content="Proxy, Unblocker, Pete Zah Unblocker, Pete Zah Games, Pete Zah" />
+    <meta name="description" content="Bubbergames, game on" />
+    <meta name="keywords" content="Proxy, Unblocker, Bubbergames Unblocker, Bubbergames Games, Bubbergames" />
 </head>
 
 <body>
@@ -67,26 +67,26 @@
     <div class="image-item" data-label="pete ai">
         <a href="/embed.html#https://byod.petezahgames.com/pages/other/ai/">
             <img src="/storage/images/PeteAI.png">
-            <div class="label">PeteAI</div>
+            <div class="label">BubAI</div>
         </a>
     </div>
 
     <div class="image-item" data-label="pete music">
         <a href="/static/google-embed.html#https://byod.petezahgames.com/pages/other/music/">
             <img src="/storage/images/petemusic-removebg-preview.png">
-            <div class="label">PeteMusic</div>
+            <div class="label">BubMusic</div>
         </a>
     </div>
     <div class="image-item" data-label="pete chat">
         <a href="https://vtx.chat/embed/petezah">
             <img src="/storage/images/vortex-petezah.webp">
-            <div class="label">PeteChat</div>
+            <div class="label">BubChat</div>
         </a>
     </div>
 	<div class="image-item" data-label="pete tv movies">
             <a href="/embed.html?no-redirect#https://pete-movies-beta.vercel.app">
                 <img src="/storage/images/pete-movies.png">
-                <div class="label">PeteMovies</div>
+                <div class="label">BubMovies</div>
             </a>
         </div>
     <div class="image-item" data-label="google">
