--- a/public/pages/g.html
+++ b/public/pages/g.html
@@ -25,13 +25,13 @@
     <script type='text/javascript'
         src='//pl27983175.effectivegatecpm.com/c1/07/27/c10727dadb32856a5f427df5cc7f44ab.js'></script>
 
-    <title>PeteZah | Games</title>
+    <title>Bubbergames | Games</title>
     <link rel="icon" type="icon/x-icon" href="/storage/images/logo-png-removebg-preview.png" />
     <link rel="stylesheet" type="text/css" href="/storage/css/themes2.css">
     <link rel="stylesheet" type="text/css" href="/storage/css/games.css" />
 
-    <meta name="description" content="Pete Zah, game on" />
-    <meta name="keywords" content="Proxy, Unblocker, Pete Zah Unblocker, Pete Zah Games, Pete Zah" />
+    <meta name="description" content="Bubbergames, game on" />
+    <meta name="keywords" content="Proxy, Unblocker, Bubbergames Unblocker, Bubbergames Games, Bubbergames" />
 </head>
 
 <body>
