--- a/public/pages/settings/index.html
+++ b/public/pages/settings/index.html
@@ -10,10 +10,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PeteZah | Settings</title>
     <link rel="icon" type="image/x-icon" href="/storage/images/logo-png-removebg-preview.png" />
-    <meta name="description" content="Pete Zah, game on" />
+    <meta name="description" content="Bubbergames, game on" />
     <link rel="stylesheet" type="text/css" href="/storage/css/themes.css">
     <link rel="stylesheet" type="text/css" href="/storage/css/settings.css" />
-    <meta name="keywords" content="Proxy, Unblocker, Pete Zah Unblocker, Pete Zah Games, Pete Zah" />
+    <meta name="keywords" content="Proxy, Unblocker, Bubbergames Unblocker, Bubbergames Games, Bubbergames" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -60,7 +60,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <label for="sitePreset">Select Preset:</label>
                 <select id="sitePreset">
                     <option value="custom">Custom</option>
-                    <option value="petezah">PeteZah</option>
+                    <option value="petezah">Bubbergames</option>
                     <option value="classroom">Google Classroom</option>
                     <option value="schoology">Schoology</option>
                     <option value="google">Google</option>
