--- a/public/pages/settings/p3.html
+++ b/public/pages/settings/p3.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PeteZah OAuth | Signup</title>
+  <title>Bubbergames OAuth | Signup</title>
   <link rel="icon" type="image/x-icon" href="/storage/images/logo-png-removebg-preview.png">
   <meta name="description" content="Pete Zah, game on">
   <link rel="stylesheet" href="/storage/css/themes.css">
-  <meta name="keywords" content="Proxy, Unblocker, Pete Zah Unblocker, Pete Zah Games, Pete Zah">
+  <meta name="keywords" content="Proxy, Unblocker, Bubbergames Unblocker, Bubbergames Games, Bubbergames">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
