--- a/public/pages/settings/index.html
+++ b/public/pages/settings/index.html
@@ -8,7 +8,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-WPH7NCG4');</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PeteZah | Settings</title>
+    <title>Bubbergames | Settings</title>
     <link rel="icon" type="image/x-icon" href="/storage/images/logo-png-removebg-preview.png" />
     <meta name="description" content="Bubbergames, game on" />
     <link rel="stylesheet" type="text/css" href="/storage/css/themes.css">
